# DN_NDKApp

./: README.md
app/: build.gradle
app/src/androidTest/java/com/dr/dn/ndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/inc/: fmod.hpp
app/src/main/java/com/dr/dn/ndk/: MainActivity.java  VoiceFix.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dr/dn/ndk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
